# 3d_bin_packer_cpp

./: .gitignore  README.md  main.cpp  pyproject.toml  setup.py
include/: bin.h  box.h  item.h  log.h  packer.h  pallet.h  utils.h
src/: bin.cpp  box.cpp  hello.py  item.cpp  log.cpp  packer.cpp  pallet.cpp  pallet_prompt.py  pybinding.cpp  test.py  utils.cpp
